# 42-ft_transcendence

./: .env  .gitignore  Dockerfile  Makefile  README.md  Readme.md  docker-compose.yml  env.txt  jsconfig.json  nginx.conf  package-lock.json
.devcontainer/: Dockerfile  nginx.conf  (+2 more)
development/server/: Cargo.toml
development/server/examples/: hello-redis.rs
development/server/src/: engine.rs  game.rs  main.rs  out  player.rs  websocket.rs
development/server/src/queue/: bridge.rs  game.rs  mod.rs
development/server/src/queue/game/: ball.rs  game_config.rs  mod.rs
server/: Cargo.toml  install.txt  ssl_final_cert.crt  ssl_priv_key.key
server/game/src/: main.rs
server/game/src/queue/: mod.rs
server/game/src/queue/game/: ball.rs  game_config.rs
server/http/: Cargo.toml
server/http/migrations/2023-07-10-150133_clients/: up.sql
server/http/src/: db.rs  handler.rs  main.rs  models.rs  schema.rs
server/http/src/handler/: get.rs  post.rs
server/http/src/ops/: client_ops.rs
server/migrations/2023-08-03-074221_app_user/: up.sql
server/migrations/2023-08-11-130231_chat_messages/: up.sql
server/migrations/2023-08-11-164409_user_room_connection/: up.sql
server/migrations/2024-01-15-161658_friends/: down.sql  up.sql
server/migrations/2024-01-15-201724_blocked_users/: down.sql  up.sql
server/migrations/2024-01-16-084108_game_match/: down.sql  up.sql
server/src/: chat.rs  main.rs
server/src/api/: auth.rs  block.rs  chat.rs  friend.rs  game.rs  mod.rs  room.rs  user.rs
server/src/chat/: actor.rs  mod.rs  server.rs
server/src/db/: mod.rs  models.rs  schema.rs
server/src/game/: actor.rs  matchmake.rs  mod.rs  one_vs_one.rs  tournament.rs
server/src/game/pong/: ball.rs  config.rs  mod.rs  player.rs
source/server/http/: Cargo.toml  install.txt  nope
source/server/http/migrations/2023-08-03-074221_app_user/: down.sql  up.sql
source/server/http/migrations/2023-08-11-125646_chat_rooms/: down.sql  up.sql
source/server/http/migrations/2023-08-11-130231_chat_messages/: down.sql  up.sql
source/server/http/migrations/2023-08-11-131001_user_chat_room/: down.sql  up.sql
source/server/http/migrations/2023-08-11-164409_user_room_connection/: down.sql
source/server/http/migrations/2023-08-11-164422_room_user_connection/: up.sql
source/server/http/src/: api.rs  chat.rs  db.rs  main.rs  models.rs  ops.rs
source/server/http/src/api/: auth.rs  chat.rs  client.rs  errors.rs  game.rs  mod.rs  room.rs  user.rs  users.rs  ws.rs
source/server/http/src/chat/: bridge.rs  chat.rs  login.rs  message.rs  mod.rs  runtime.rs  server.rs  user.rs
source/server/http/src/db/: migrations.rs  mod.rs  models.rs  schema.rs  wrapper.rs
source/server/http/src/game/: matchmake.rs  mod.rs  one_vs_one.rs  tournament.rs
source/server/http/src/game/pong/: ball.rs  config.rs  mod.rs  player.rs
source/server/http/src/handler/: get.rs
source/server/http/src/http/: mod.rs  oauth.rs
source/server/http/src/http/api/: auth.rs  error.rs  mod.rs  room.rs  user.rs  users.rs
source/server/http/src/http/db/: mod.rs  models.rs  schema.rs
source/server/http_server/: Cargo.toml
source/server/http_server/migrations/2023-08-11-125646_chat_rooms/: up.sql
source/server/http_server/migrations/2023-08-11-164422_room_user_connection/: down.sql
source/server/http_server/src/: lib.rs  main.rs
source/server/http_server/src/chat/: login.rs  mod.rs  user.rs
source/server/http_server/src/db/: schema.rs
(+79 files in other folders)
