[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
codegen-units = 16

[profile.release]
codegen-units = 16

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"