[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-identity = "0.5.2"
actix-session = "0.7.2"
actix-cors = "0.6.4"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
anyhow = "1.0.72"
oauth2 = "4.2"
env_logger = "0.10.0"
