[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Chat 
tungstenite = "0.19.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"

# HTTP
actix-web = { version = "4" }
actix-service = "2.0.2"
oauth2 = "4.2"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
anyhow = "1.0.72"

# Utils
rand = "0.8"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-identity = "0.5.2"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
reqwest = { version = "0.11", features = ["json"] }
derive_more = "0.99.17"

# env_logger = "0.10.0"
# log = "0.4"

# chat (removed serde and serde_json)
